# sketch

./: .gitignore  ARCHITECTURE.md  COMMIT_CHEATSHEET.md  COMMIT_GUIDE.md  COMMIT_WORKFLOW.md  CONTRIBUTING.md  Cargo.toml  README.md  TESTING.md  USER_GUIDE.md  cscope.out  cscope.out.in  cscope.out.po  test.sh
.github/workflows/: README.md  quality.yml  release.yml  test.yml
docs/: architecture.md  contributing.md  installation.md  llm_usage.md  safety.md  todo.md  troubleshooting.md  usage.md
src/: cli.rs  commit.rs  fs_utils.rs  main.rs  metadata.rs  overlay.rs  package.rs  session.rs  userns.rs  utils.rs
tests/: cli_tests.rs  integration_tests.rs  mount_naming_tests.rs  overlay_isolation_tests.rs  overlay_tests.rs  phase2_tests.rs  session_tests.rs
